--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Chrome OS IME,Browser Extension IME UI,VScode Simple IME.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha --require ts-node/register"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,27 @@
   "bugs": {
     "url": "https://github.com/zhangkaiser/zhime/issues"
   },
-  "homepage": "https://github.com/zhangkaiser/zhime#readme"
+  "homepage": "https://github.com/zhangkaiser/zhime#readme",
+  "devDependencies": {
+    "@types/chrome": "^0.0.206",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^18.11.17",
+    "@types/vscode": "^1.74.0",
+    "@types/webpack": "^5.28.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "eslint": "^8.30.0",
+    "html-webpack-plugin": "^5.5.0",
+    "jsdom": "^20.0.3",
+    "mocha": "^10.2.0",
+    "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
+  },
+  "dependencies": {
+    "lit": "^2.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  }
 }
