--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Chrome OS IME,Browser Extension IME UI,VScode Simple IME.",
   "main": "index.js",
   "scripts": {
-    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha --require ts-node/register --extension ts"
+    "test": "env TS_NODE_PROJECT=./test/tsconfig.test.json mocha --require ts-node/register --require tsconfig-paths/register --extension ts --recursive './test/**/*.ts'"
   },
   "repository": {
     "type": "git",
@@ -22,11 +22,13 @@
   },
   "homepage": "https://github.com/zhangkaiser/zhime#readme",
   "devDependencies": {
+    "@types/chai": "^4.3.4",
     "@types/chrome": "^0.0.206",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.11.17",
     "@types/vscode": "^1.74.0",
     "@types/webpack": "^5.28.0",
+    "chai": "^4.3.7",
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.30.0",
     "html-webpack-plugin": "^5.5.0",
@@ -34,6 +36,7 @@
     "mocha": "^10.2.0",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.1",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
