--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,9 @@
     "paths": {
       "src/*": [
         "./src/*"
+      ],
+      "mock/*": [
+        "./test/mock/*"
       ]
     },
     "module": "commonjs",
