--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "@types/webpack": "^5.28.0",
     "chai": "^4.3.7",
     "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.3",
     "eslint": "^8.30.0",
     "html-webpack-plugin": "^5.5.0",
     "jsdom": "^20.0.3",
     "mocha": "^10.2.0",
+    "style-loader": "^3.3.1",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.1",
