--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
+    "@toast-ui/editor": "^3.2.1",
     "lit": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
