--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "html-webpack-plugin": "^5.5.0",
     "jsdom": "^20.0.3",
     "mocha": "^10.2.0",
+    "rimraf": "^4.1.2",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
