--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/node": "^18.11.17",
     "@types/vscode": "^1.74.0",
     "@types/webpack": "^5.28.0",
+    "@types/emscripten": "^1.39.6",
     "chai": "^4.3.7",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
